Fix paint property under-invalidation checking about reference filters

Previously we checked equality of reference filters by comparing the
pointers to SkImageFilters. This cause false-positive when we forced
property update for under-invalidation checking.

Now ignore reference filters when comparing effect nodes, and check
for changes of filter operations defined in style to remedy the
ignored check.

An alternative way is to add value equality operators in SkImageFilter
subclasses, but that seems to need more code and time than this CL.
We might make that a long-term objective.

BUG=671097
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2556013002
Cr-Commit-Position: refs/heads/master@{#437470}

Former-commit-id: b3e11fe44bc15048029e2093a428234f0da084d3